合并后就不好回退
历史版本回滚功能挺好用。

--- a/Mar/屯书问题.md
+++ b/Mar/屯书问题.md
@@ -1,18 +1,9 @@
 ---
-<<<<<<< HEAD
-title: 我可不信邪
-=======
-title: 屯书专题
->>>>>>> 7e1fe315b96e5fe45d418e743eac32a3fe1c619c
+title: 什么人屯书
 author: The Kite Runner
 ---
 
- 
-
-<<<<<<< HEAD
- 
-=======
-\#\# 什么人屯书  
+  
 在这里，简单分析一下，在什么情况下，什么人，会屯什么样的书？
 
 首先申明一下“书”的限定范围，主要指网上搜罗的各种形式的电子书。但是许多人买了纸质书也不看啊？有些人从图书馆借了许多书也不看啊？
@@ -26,10 +17,6 @@ author: The Kite Runner
 没有明确目标
 
 有明确目标（收藏家）
-
- 
-
- 
 
 -   什么情况下
 
@@ -134,4 +121,4 @@ author: The Kite Runner
         -   有些书友会说，我屯书不光为了自己，我是为了传播，这样有需要的人，都可以从我这里找到他们喜欢的书。这样的书友，我还是要先叫一声好的。只是，你把自己觉得好的，一股脑全塞给别人了，浩如烟海的书籍，会不会把人砸懵，让人无从选择。当然，也可能是我要求过高。可是，既然你立志成为一个传播者，就要有责任感。如果你只是一股脑的收集，一股脑的给别人，这和我们反感的填鸭式教育有什么本质上的区别吗。不要成为自己讨厌的人的模样。
 
         -   有句话是这样说的——书非借不能读也。意思就是借来的书因为要还所以一定会看。引申来说就是，不要只屯书不看书。屯了也白屯。
->>>>>>> 7e1fe315b96e5fe45d418e743eac32a3fe1c619c
+            \>\>\>\>\>\>\> 7e1fe315b96e5fe45d418e743eac32a3fe1c619c
